--- a/app/src/main/res/layout/activity_landing_screen.xml
+++ b/app/src/main/res/layout/activity_landing_screen.xml
@@ -69,6 +69,7 @@
             android:textColor="#ffffff" />
 
         <Button
+            android:id="@+id/button_sign_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
