--- a/app/src/main/res/layout/activity_sign_in_account.xml
+++ b/app/src/main/res/layout/activity_sign_in_account.xml
@@ -32,7 +32,7 @@
         android:singleLine="true" />
 
     <Button
-        android:id="@+id/textViewRegister"
+        android:id="@+id/textViewLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editTextPassword"
@@ -46,4 +46,47 @@
         android:text="@string/log_in"
         android:textColor="#ffffff" />
 
+    <TextView
+        android:id="@+id/textViewNoAccountCreateNew"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/no_account"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/textViewLogin"
+        android:layout_marginTop="@dimen/fab_margin"
+        android:textColor="#000000"
+        android:textSize="16sp"/>
+
+    <TextView
+        android:id="@+id/textViewForgotPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/forgot_password"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/textViewNoAccountCreateNew"
+        android:layout_marginTop="@dimen/fab_margin"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:textSize="16sp"/>
+
+    <TextView
+        android:id="@+id/textViewPrivacyPolicy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/privacy_policy"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/textViewForgotPassword"
+        android:layout_marginTop="@dimen/fab_margin"
+        android:textColor="#000000"
+        android:textSize="14sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/company_name"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/textViewPrivacyPolicy"
+        android:layout_marginTop="10dp"
+        android:textColor="#000000"
+        android:textSize="12sp"/>
 </RelativeLayout>
