--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -99,18 +99,19 @@
             android:paddingRight="30dp"
             android:paddingTop="10dp"
             android:text="@string/create"
-            android:textColor="#ffffff" />
+            android:textColor="#ffffff"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/acceptance"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textViewRegister"
+            android:layout_below="@+id/linearLayout"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/fab_margin"
             android:gravity="center_horizontal"
             android:text="@string/terms_and_condition_acceptance"
-            android:textColor="#777777"
+            android:textColor="@color/textColorLightTitle"
             android:textSize="14sp" />
 
         <TextView
@@ -123,7 +124,7 @@
             android:gravity="center"
             android:padding="@dimen/fab_margin"
             android:text="@string/privacy_policy"
-            android:textColor="#000000"
+            android:textColor="@color/textColorDark"
             android:textSize="16sp" />
 
         <TextView
@@ -133,7 +134,7 @@
             android:layout_centerHorizontal="true"
             android:layout_weight="1"
             android:text="@string/company_name"
-            android:textColor="#777777"
+            android:textColor="@color/textColorLightTitle"
             android:textSize="16sp" />
     </RelativeLayout>
 </ScrollView>
