--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -9,42 +9,44 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.singular.barrister.ForgotPassword">
+
     <EditText
         android:id="@+id/editTextEmailId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/fab_margin"
+        android:ems="10"
         android:hint="@string/hint_email_id"
         android:inputType="textPersonName"
         android:maxLines="1"
-        android:layout_marginTop="@dimen/fab_margin"
         android:singleLine="true" />
 
     <Button
+        android:id="@+id/buttonGetPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/buttonGetPassword"
-        android:text="@string/get_password"
-        android:background="@drawable/circular_corner_button"
         android:layout_below="@+id/editTextEmailId"
-        android:paddingLeft="15dp"
         android:layout_centerHorizontal="true"
-        android:textColor="#ffffff"
+        android:layout_marginTop="@dimen/fab_margin"
+        android:background="@drawable/circular_corner_button"
+        android:paddingBottom="5dp"
+        android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:paddingTop="5dp"
-        android:layout_marginTop="@dimen/fab_margin"
-        android:paddingBottom="5dp"/>
+        android:text="@string/get_password"
+        android:textColor="#ffffff"
+        android:visibility="gone" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/enter_email_id"
-        android:textColor="#777777"
-        android:textSize="16sp"
-        android:layout_marginTop="@dimen/fab_margin"
-        android:layout_below="@id/buttonGetPassword"
+        android:layout_below="@id/editTextEmailId"
         android:layout_centerHorizontal="true"
-        android:gravity="center"/>
+        android:layout_marginTop="@dimen/fab_margin"
+        android:gravity="center"
+        android:text="@string/enter_email_id"
+        android:textColor="@color/textColorLightTitle"
+        android:textSize="16sp" />
 </RelativeLayout>
