--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,34 +6,33 @@
     android:layout_height="match_parent"
     tools:context="com.singular.barrister.SplashActivity">
 
-    <TextView
-        android:id="@+id/textViewLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/logo"
-        android:textColor="#000000"
-        android:textSize="30sp"
-        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewLogo"
-        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textViewLogo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/logo"
+            android:textColor="@color/colorPrimary"
+            android:textSize="30sp"
+            android:textStyle="bold" />
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="#000000" />
+            android:background="@color/colorPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_title_bold"
-            android:textColor="#000000"
+            android:textColor="@color/colorPrimary"
             android:textSize="23sp"
             android:textStyle="bold" />
 
@@ -42,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/your_online_diary"
-            android:textColor="#000000"
+            android:textColor="@color/colorPrimary"
             android:textSize="14sp"/>
     </LinearLayout>
 
