--- a/app/src/main/res/layout/content_home_screen.xml
+++ b/app/src/main/res/layout/content_home_screen.xml
@@ -12,7 +12,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="#EBEBF1"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="parent"
@@ -24,7 +23,7 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#ffffff"/>
+            android:background="@color/colorPrimary"/>
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
