--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#000000</color>
-    <color name="colorPrimaryDark">#22000000</color>
-    <color name="colorAccent">#000000</color>
+    <color name="colorPrimary">#075E54</color>
+    <color name="colorPrimaryDark">#054D44</color>
+    <color name="colorAccent">#075E54</color>
+
+    <color name="textColorDark">#021815</color>
+    <color name="textColorLightTitle">#55021815</color>
+    <color name="textColorLight">#09776a</color>
+    <color name="textColorFaint">#e7fdfb</color>
 </resources>
