--- a/app/src/main/res/menu/option.xml
+++ b/app/src/main/res/menu/option.xml
@@ -20,7 +20,12 @@
 
     <item
         android:id="@+id/menuLogout"
-        android:title="@string/menu_log_out"
-        />
+        android:title="@string/menu_log_out" />
 
+    <item
+        android:id="@+id/menuSearch"
+        android:icon="@mipmap/ic_search_icon"
+        android:title="Search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="always|collapseActionView"/>
 </menu>
