--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/fab_margin"
+    android:background="#FAFAFA"
     tools:context="com.singular.barrister.ProfileActivity">
 
     <LinearLayout
@@ -27,66 +28,88 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Name"
-            android:textSize="14sp"
-            android:textColor="@color/textColorDark"/>
+            android:textColor="#000000"
+            android:textSize="16sp" />
 
-        <EditText
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:editable="false"
-            android:enabled="false"
+            android:layout_marginTop="5dp"
             android:text="Rahul B Kalamkar"
-            android:textColor="@color/textColorLightTitle" />
+            android:textColor="#777777"
+            android:textSize="16sp" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.2dp"
+            android:layout_marginTop="10dp"
+            android:background="#777777" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/fab_margin"
             android:text="Email id"
-            android:textColor="@color/textColorDark"
-            android:textSize="14sp" />
+            android:textColor="#000000"
+            android:textSize="16sp" />
 
-        <EditText
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:editable="false"
-            android:enabled="false"
+            android:layout_marginTop="5dp"
             android:text="rahulbkalamkar@gmail.com"
-            android:textColor="@color/textColorLightTitle" />
+            android:textColor="#777777"
+            android:textSize="16sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.2dp"
+            android:layout_marginTop="10dp"
+            android:background="#777777" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/fab_margin"
             android:text="Phone number"
-            android:textColor="@color/textColorDark"
-            android:textSize="14sp" />
+            android:textColor="#000000"
+            android:textSize="16sp" />
 
-        <EditText
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:editable="false"
-            android:enabled="false"
+            android:layout_marginTop="5dp"
             android:text="+91 9762 99 3179"
-            android:textColor="@color/textColorLightTitle" />
+            android:textColor="#777777"
+            android:textSize="16sp" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.2dp"
+            android:layout_marginTop="10dp"
+            android:background="#777777" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/fab_margin"
             android:text="Address"
-            android:textColor="@color/textColorDark"
-            android:textSize="14sp" />
+            android:textColor="#000000"
+            android:textSize="16sp" />
 
-        <EditText
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:editable="false"
-            android:enabled="false"
+            android:layout_marginTop="5dp"
             android:text="101, Guru krupa building, Navghar Lane-1 Mulund East"
-            android:textColor="@color/textColorLightTitle" />
+            android:textColor="#777777"
+            android:textSize="16sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.2dp"
+            android:layout_marginTop="10dp"
+            android:background="#777777" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
