--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -31,6 +31,7 @@
                 android:hint="@string/hint_number"
                 android:inputType="phone"
                 android:maxLines="1"
+                android:focusable="false"
                 android:singleLine="true" />
 
 
