--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -28,10 +28,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:focusable="false"
                 android:hint="@string/hint_number"
                 android:inputType="phone"
                 android:maxLines="1"
-                android:focusable="false"
                 android:singleLine="true" />
 
 
@@ -101,7 +101,7 @@
             android:paddingTop="10dp"
             android:text="@string/create"
             android:textColor="#ffffff"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/acceptance"
@@ -137,5 +137,13 @@
             android:text="@string/company_name"
             android:textColor="@color/textColorLightTitle"
             android:textSize="16sp" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
     </RelativeLayout>
 </ScrollView>
