--- a/app/src/main/res/layout/activity_sign_in_account.xml
+++ b/app/src/main/res/layout/activity_sign_in_account.xml
@@ -45,7 +45,7 @@
         android:paddingTop="10dp"
         android:text="@string/log_in"
         android:textColor="#ffffff"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/textViewNoAccountCreateNew"
@@ -91,4 +91,12 @@
         android:text="@string/company_name"
         android:textColor="#000000"
         android:textSize="12sp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 </RelativeLayout>
