--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/fab_margin"
-    tools:context="com.singular.barrister.ChangePassword">
+    tools:context="com.singular.barrister.Activity.ChangePassword">
 
     <LinearLayout
         android:layout_width="336dp"
