--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.singular.barrister.ForgotPassword">
+    tools:context="com.singular.barrister.Activity.ForgotPassword">
 
     <EditText
         android:id="@+id/editTextEmailId"
