--- a/app/src/main/res/layout/activity_sign_in_account.xml
+++ b/app/src/main/res/layout/activity_sign_in_account.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/fab_margin"
-    tools:context="com.singular.barrister.SignInAccount">
+    tools:context="com.singular.barrister.Activity.SignInAccount">
 
     <EditText
         android:id="@+id/editTextPhoneNumber"
