--- a/app/src/main/res/layout/content_home_screen.xml
+++ b/app/src/main/res/layout/content_home_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.singular.barrister.HomeScreen"
+    tools:context="com.singular.barrister.Activity.HomeScreen"
     tools:showIn="@layout/activity_home_screen"
     android:background="#FAFAFA">
 
