--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.singular.barrister.HomeScreen">
+    tools:context="com.singular.barrister.Activity.HomeScreen">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
