--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -8,13 +8,20 @@
     tools:context="com.singular.barrister.Activity.ChangePassword">
 
     <LinearLayout
-        android:layout_width="336dp"
-        android:layout_height="463dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1">
 
         <EditText
+            android:id="@+id/edtTextOldPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/enter_password"
@@ -23,6 +30,7 @@
             android:singleLine="true" />
 
         <EditText
+            android:id="@+id/edtTextNewPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/enter_new_password"
@@ -31,6 +39,7 @@
             android:singleLine="true" />
 
         <EditText
+            android:id="@+id/edtTextNewPasswordConfirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/confirm_new_password"
