--- a/app/src/main/res/layout/activity_select_state.xml
+++ b/app/src/main/res/layout/activity_select_state.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FAFAFA"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:orientation="vertical"
+    android:gravity="center"
+    android:layout_gravity="center"
+    android:background="#FAFAFA"
     android:padding="@dimen/fab_margin">
 
     <EditText
@@ -20,5 +23,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycleView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:background="#FAFAFA"
+        android:padding="@dimen/fab_margin"/>
 </LinearLayout>
