--- a/app/src/main/res/layout/date_picker_layout.xml
+++ b/app/src/main/res/layout/date_picker_layout.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#99777777"
     android:padding="@dimen/fab_margin">
 
@@ -9,48 +10,55 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="#FAFAFA">
-        <RelativeLayout android:id="@+id/pickerLayout"
+        android:background="@color/colorAccent_Refer">
+
+        <RelativeLayout
+            android:id="@+id/pickerLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
             <DatePicker
                 android:id="@+id/datePicker"
-                android:layout_centerInParent="true"
+                style="@style/MyDatePickerStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#FAFAFA"/>
+                android:layout_centerInParent="true"
+                android:calendarTextColor="#000000" />
 
 
             <TimePicker
                 android:id="@+id/timePicker"
+                style="@style/MyTimePickerStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:numbersTextColor="#ffffff"
                 android:layout_centerInParent="true"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
         </RelativeLayout>
+
         <TextView
             android:id="@+id/textViewSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ok"
-            android:padding="@dimen/fab_margin"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:layout_below="@+id/pickerLayout"
+            android:layout_alignEnd="@+id/pickerLayout"
             android:layout_alignRight="@+id/pickerLayout"
-            android:layout_alignEnd="@+id/pickerLayout" />
+            android:layout_below="@+id/pickerLayout"
+            android:padding="@dimen/fab_margin"
+            android:text="Ok"
+            android:textColor="#000000"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/textViewCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Canecl"
-            android:padding="@dimen/fab_margin"
             android:layout_below="@+id/pickerLayout"
             android:layout_toLeftOf="@+id/textViewSave"
             android:layout_toStartOf="@+id/textViewSave"
+            android:padding="@dimen/fab_margin"
+            android:text="Canecl"
             android:textColor="#000000"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
     </RelativeLayout>
 </RelativeLayout>
