--- a/app/src/main/res/layout/activity_add_case.xml
+++ b/app/src/main/res/layout/activity_add_case.xml
@@ -50,6 +50,7 @@
                     android:id="@+id/EditTextCaseStatusError"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/fab_margin"
                     app:errorEnabled="true">
 
                     <android.support.design.widget.TextInputEditText
